# yoink

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  EXTENSION-BUILD.md  IDM-BEHAVIOR.md
extension/: background.js  manifest.json
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
packaging/homebrew/: yoink.rb
scripts/recon/: range_server.py  setup-pandai.sh
tests/integration/: test_native_host.py  test_resume.py  test_smoke.py
tests/unit/: test_auth_retry.py
yoink/: __init__.py  __main__.py  exceptions.py  py.typed
yoink/auth/: cookies.py
yoink/browser/: install.py  native_host.py  protocol.py
yoink/cli/: commands.py  main.py
yoink/core/: engine.py  http_client.py  resume.py  retry.py  segment.py  state.py
yoink/media/: ytdlp.py
